correcion de endpoints

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_AUTH0_CLIENT_ID="2pAG1bqjNygUdn8LimY58gMP22iTs755"
 REACT_APP_AUTH0_DOMAIN="dev-z3siygdqa2x31a4u.us.auth0.com"
+REACT_APP_API_URL="http://coloquio-backend.vercel.app/api/"
